--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chrome-extension-boilerplate-react",
+  "name": "todoist-custom-sorter",
   "version": "5.0.4",
-  "description": "A chrome extension boilerplate built with React 18, Webpack 5, and Webpack Dev Server 4",
+  "description": "A chrome extension that allows custom todoist sorting",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -13,8 +13,13 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
+    "svg-pan-zoom": "^3.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -24,6 +29,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@types/chrome": "^0.0.202",
     "@types/react": "^18.0.26",
+    "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-dom": "^18.0.10",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
